--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
          <artifactId>slf4j-api</artifactId>
          <version>${slf4j.version}</version>
       </dependency>
+
+       <dependency>
+           <groupId>log4j</groupId>
+           <artifactId>log4j</artifactId>
+           <version>1.2.17</version>
+       </dependency>
+
       <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-slf4j-impl</artifactId>
